<resources>
    <string name="app_name">Ficha do Paciente</string>
    <string name="nomepaciente">Nome do Paciente:</string>
    <string name="leito">Numero do Leito:</string>
    <string name="pressaoart">Pressão Arterial:</string>
    <string name="temperatura">Temperatura do Corpo:</string>
    <string name="batimentocard">Batimentos Cardiacos:</string>
    <string name="dados">Enviar Dados</string>
    <string name="dados2">Outro paciente</string>
    <string name="title_activity_main2">Ficha Hospital</string>
    
</resources>
