<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    tools:context=".Main2Activity">


    <!-- Titulo da Aplicação -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/FichaPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_span="2"
            android:text="@string/app_name" />
    </TableRow>

    <!-- IMAGEM  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="196dp"
            android:layout_height="135dp"
            android:layout_span="2"
            android:elevation="10dp"
            app:srcCompat="@drawable/enfermagem" />
    </TableRow>

    <!-- Nome do Paciente -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textnome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/nomepaciente"
            android:textColor="#900404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pacientedados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <!-- NUM do leito -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/numero_leito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/leito"
            android:textColor="#FF900404"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/leitodados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:editable="false"
            android:inputType="number" />
    </TableRow>

    <!-- Pressão Arterial do Paciente  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/pressao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/pressaoart"
            android:textColor="#FF900404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pressaodados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:editable="false"
            android:inputType="number" />

    </TableRow>

    <!-- Temperatura do Corpo -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/temperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/temperatura"
            android:textColor="#FF900404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/temperaturaDados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:editable="false"
            android:inputType="number" />

    </TableRow>

    <!-- Batimentos do Paciente  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/batimento"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/batimentocard"
            android:textColor="#FF900404"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/batimentodados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:editable="false"
            android:inputType="number" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btnenviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:background="#FF4040"
            android:editable="false"
            android:text="@string/dados2"
            tools:text="Outro Paciente" />
    </TableRow>

</TableLayout>