<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    android:gravity="clip_vertical"
    tools:context=".MainActivity">


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="196dp"
            android:layout_height="135dp"
            android:layout_span="2"
            android:elevation="10dp"
            app:srcCompat="@drawable/enfermagem" />

    </TableRow>

    <TableRow

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textnome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/nomepaciente"
            android:textColor="#900404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />


    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/numero_leito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/leito"
            android:textColor="#FF900404"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/edt_numero_leito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:inputType="number" />


    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pressao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/pressaoart"
            android:textColor="#FF900404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_pressao_arterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/temperatura"
            android:textColor="#FF900404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_temperatura_corporal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/batimento"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:text="@string/batimentocard"
            android:textColor="#FF900404"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_batimento_cardiacos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnenviar"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:layout_weight="0"
            android:background="#FF4040"
            android:fontFamily="sans-serif-condensed"
            android:onClick="onClickBtnEnviar"
            android:text="@string/dados" />

    </TableRow>

</TableLayout>